--- a/typotheque-prevert/user/themes/typotheque-prevert/templates/partials/base.html.twig
+++ b/typotheque-prevert/user/themes/typotheque-prevert/templates/partials/base.html.twig
@@ -47,9 +47,10 @@
 
 {% block header %}
     <div class="header">
-        Typothèque DNMAD Lycée Jacques Prévert
+        Typothèque DNMADE Lycée Jacques Prévert
     </div>
 {% endblock %}
+
 
 {% block body %}
     <section id="body">
