--- a/typotheque-prevert/user/themes/typotheque-prevert/templates/partials/base.html.twig
+++ b/typotheque-prevert/user/themes/typotheque-prevert/templates/partials/base.html.twig
@@ -49,8 +49,11 @@
 {% block header %}
     <div class="header">
         <h2>Typothèque Chic Type<h2>
-        <h5>infos + contact</h5>
 
+            <h5 class="accordion">infos + contact</h5>
+        <div class="panel">
+            <p>Texte à afficher du colophon</p>
+        </div>
     </div>
 {% endblock %}
 
