--- a/typotheque-prevert/user/themes/typotheque-prevert/templates/default.html.twig
+++ b/typotheque-prevert/user/themes/typotheque-prevert/templates/default.html.twig
@@ -33,6 +33,15 @@
   <div class="btn zoom-init"></div>
 </div>
 
+<div class="panel panel-font">
+  <h3 class="entree-font">nom de la font</h3>
+  <h4 class="entree-font">prénom et nom du créateur de la font<br>
+  date<br>
+  Workshop de nom de l'intervenant
+  </h4>
+  <p class="entree-font">description du workshop</p>
+</div>
+
 
 
 
