--- a/typotheque-prevert/user/themes/typotheque-prevert/templates/default.html.twig
+++ b/typotheque-prevert/user/themes/typotheque-prevert/templates/default.html.twig
@@ -29,6 +29,20 @@
   </div>
 </div>
 
+{# panel header normal #}
+    <div class="header-panel-font">
+        <p class="texte-back-colophon">Typographie dessinée lors du workshop {{ workshop.title }} avec {{ workshop.header.custom.inviteworkshop }} en {{ workshop.header.custom.anneeworkshop }}.<br>{{ workshop.content }}</p>
+
+        <h2>{{font.title}}<h2>
+            <h5 class="accordion">{{ font.header.custom.auteur }}</h5>
+        
+        <div class="panel">
+            <p>
+                <a class="link-typo" href="{{ base_url_absolute }}{{font.route}}/fichiersfontes/{{font.header.custom.archivezip|first.name}}">Télécharger la font</a>
+            </p>
+        </div>
+    </div>
+
 
 <div id="buttons">
   <div class="btn zoom"></div>
