--- a/typotheque-prevert/user/themes/typotheque-prevert/templates/default.html.twig
+++ b/typotheque-prevert/user/themes/typotheque-prevert/templates/default.html.twig
@@ -21,7 +21,7 @@
   <div class="zoom-conteneur" id="conteneur">
     {% for workshop in pages.find('/typotheque').children %}
       {% for font in workshop.children %}
-      <div class="entree-font" data-workshop-name="{{ workshop.title }}" data-workshop-annee="{{ workshop.header.custom.anneeworkshop }}" data-workshop-invite="{{ workshop.header.custom.inviteworkshop }}" data-workshop-informations="{{ workshop.content }}">
+      <div class="entree-font" data-font-name="{{ font.title }}" data-workshop-name="{{ workshop.title }}" data-workshop-annee="{{ workshop.header.custom.anneeworkshop }}" data-workshop-invite="{{ workshop.header.custom.inviteworkshop }}" data-workshop-informations="{{ workshop.content }}">
             <h1 class="{{ font.title }}" data-font-date="{{ font.header.custom.datesortie }}" data-font-lientelechargement="{{ base_url_absolute }}{{font.route}}/fichiersfontes/{{font.header.custom.archivezip|first.name}}" data-font-auteur="{{ font.header.custom.auteur }}" contenteditable>{{font.header.custom.phrasepoetique}}</h1>
       </div>
       {% endfor %}
@@ -29,19 +29,6 @@
   </div>
 </div>
 
-{# panel header normal #}
-    <div class="header-panel-font">
-        <p class="texte-back-colophon">Typographie dessinée lors du workshop {{ workshop.title }} avec {{ workshop.header.custom.inviteworkshop }} en {{ workshop.header.custom.anneeworkshop }}.<br>{{ workshop.content }}</p>
-
-        <h2>{{font.title}}<h2>
-            <h5 class="accordion">{{ font.header.custom.auteur }}</h5>
-        
-        <div class="panel">
-            <p>
-                <a class="link-typo" href="{{ base_url_absolute }}{{font.route}}/fichiersfontes/{{font.header.custom.archivezip|first.name}}">Télécharger la font</a>
-            </p>
-        </div>
-    </div>
 
 
 <div id="buttons">
