--- a/typotheque-prevert/user/themes/typotheque-prevert/templates/partials/base.html.twig
+++ b/typotheque-prevert/user/themes/typotheque-prevert/templates/partials/base.html.twig
@@ -69,22 +69,23 @@
                 <a href="https://gitlab.com/bonjour-monde/projects/typotheque-prevert" class="link-typo">Typothèque Gitlab</a>
             </p>
         </div>
-    </div>
 
-
-{# panel header normal #}
     <div class="header-panel-font">
-        <p class="texte-back-colophon">Typographie dessinée lors du workshop {{ workshop.title }} avec {{ workshop.header.custom.inviteworkshop }} en {{ workshop.header.custom.anneeworkshop }}.<br>{{ workshop.content }}</p>
+        <p class="texte-back-colophon">Typographie dessinée lors du workshop <span class="workshoptitle"></span> avec <span class="inviteworkshop"></span> en <span class="anneeworkshop"></span>.<br><span class="workshoptexte"></span></p>
 
-        <h2>{{font.title}}<h2>
-            <h5 class="accordion">{{ font.header.custom.auteur }}</h5>
+        <h2><span class="fonttitle"></span><h2>
+            <h5 class="accordion"><span class="auteurfont"></span></h5>
         
-        <div class="panel">
+        <div class="">
             <p>
-                <a class="link-typo" href="{{ base_url_absolute }}{{font.route}}/fichiersfontes/{{font.header.custom.archivezip|first.name}}">Télécharger la font</a>
+                <a class="link-typo" href="">Télécharger la font</a>
+                <p class="fermer">fermer</p>
             </p>
         </div>
     </div>
+    </div>
+
+
 
     
 {% endblock %}
@@ -129,15 +130,12 @@ h5{
 
 
 .header-panel-font{
-    width: auto;
     padding-left: 20px;
     text-align: center;
     padding-right: 20px;
-    position: fixed;
-    z-index: 3;
-    background-color: var(--white-background-color);
-    box-shadow: 10px 5px 10px rgba(255, 84, 0, 0.5);
-    font-family: var(--primary-font);
+    padding-top:20px;
+    border-top: 1px solid var(--primary-color);
+    display:none;
 }
 
 
