--- a/typotheque-prevert/user/themes/typotheque-prevert/templates/partials/base.html.twig
+++ b/typotheque-prevert/user/themes/typotheque-prevert/templates/partials/base.html.twig
@@ -47,9 +47,9 @@
 <body id="top" class="{{ page.header.body_classes|e }}">
 
 {% block header %}
-    <div class="header">
-        <p class="texte-back-colophon">Typothèque du DNMADE graphisme Augmenté</p>
-        <h2>chic type<h2>
+    <div class="header" id="header">
+        <p class="petite-fonte">Typothèque du DNMADE graphisme Augmenté</p>
+        <h2 class="titresite">chic type<h2>
             <h5 class="accordion">infos + contact</h5>
         
         <div class="panel">
