--- a/typotheque-prevert/user/themes/typotheque-prevert/css/custom.css
+++ b/typotheque-prevert/user/themes/typotheque-prevert/css/custom.css
@@ -28,13 +28,21 @@ body {
 }
 
 .header{
-    width: 25vw;
     padding-left: 20px;
     position: fixed;
     z-index: 3;
+    text-align: center;
     background-color: var(--white-background-color);
     box-shadow: 10px 5px 10px rgba(255, 84, 0, 0.5);
     font-family: var(--primary-font);
+}
+.header{
+padding: 1em 1em .7em 1em;
+}
+.petite-fonte{
+    font-size: 0.7em;
+    line-height: 1.3em;
+    color: var(--secondary-color);
 }
 
 h2{
@@ -43,6 +51,13 @@ h2{
 }
 
 
+
+.glyphsetcapitales{
+    text-transform: uppercase;
+}
+.glyphsetbasedecasse{
+    text-transform: lowercase;
+}
 
 
 
@@ -71,6 +86,7 @@ h1:hover{
     grid-template-rows: repeat(30,20px);    
     justify-content: start;
 }
+
 .low-opacity{
     opacity:.3;
 }
@@ -182,6 +198,14 @@ h1:hover{
   transition: max-height 0.2s ease-out;
 }
 
+.panel, .texte-back-colophon, .titresite{
+    width:25rem;
+    margin: auto;
+}
+.titresite{
+    line-height: .8em;
+    margin-bottom: 1.2em;
+}
 
 [contenteditable]{
     outline: 0px solid transparent;
