--- a/typotheque-prevert/user/themes/typotheque-prevert/templates/partials/base.html.twig
+++ b/typotheque-prevert/user/themes/typotheque-prevert/templates/partials/base.html.twig
@@ -76,10 +76,9 @@
         <h2><span class="fonttitle"></span><h2>
             <h5 class="accordion"><span class="auteurfont"></span></h5>
         
-        <div class="">
+        <div>
             <p>
                 <a class="link-typo" href="">Télécharger la font</a>
-                <p class="fermer">fermer</p>
             </p>
         </div>
     </div>
@@ -94,6 +93,12 @@
 
 
 <style type="text/css">
+
+.header-panel-font h2{
+    margin-top: 0.2vh;
+}
+
+
 
 .header{
     text-align: center;
